<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/canhao" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNumberDecimalVelocidadeBala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EFD880"
            android:ems="10"
            android:hint="@string/velocidadeBala"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#D61515"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <EditText
            android:id="@+id/editTextNumberDecimalAnguloCanhao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#EFD880"
            android:ems="10"
            android:hint="@string/anguloCanhao"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#D61515"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCalcularTiroCanhao"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:onClick="calcularTiroCanhao"
        android:text="@string/tiroCanhao"
        android:textColor="#FFAB40"
        android:textSize="22sp"
        android:textStyle="bold"
        app:backgroundTint="#0A0F73"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/textViewAlturaBala"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#EFD880"
        android:text="@string/alturaBala"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#D61515"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularTiroCanhao" />

    <TextView
        android:id="@+id/textViewDistanciaBala"
        android:layout_width="380dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="#EFD880"
        android:text="@string/distanciaBala"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#D61515"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlturaBala" />

</androidx.constraintlayout.widget.ConstraintLayout>



